# ExamAI-Hybrid

./: .npmrc  main.py  package.json  replit.md
artifacts/api-server/: main.py
artifacts/examai/: main.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
artifacts/examai/public/: manifest.json
artifacts/examai/src/: App.tsx  index.css
artifacts/examai/src/components/: Dropzone.tsx  ExamHistory.tsx  ExamResult.tsx  Header.tsx  LoadingScreen.tsx  LocalModelLoader.tsx  LocalModelStatus.tsx  Logo.tsx  SettingsModal.tsx  StatsPanel.tsx
artifacts/examai/src/hooks/: useModelSync.ts
artifacts/examai/src/lib/: localLLM.ts  pdfExport.ts  plagiarismPdfExport.ts  plagiarismWordExport.ts  utils.ts  wordExport.ts
artifacts/examai/src/pages/: Dashboard.tsx  ExamGenerator.tsx  PlagiarismDetector.tsx  not-found.tsx
