[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "uvicorn[standard]>=0.49.0",
]
